sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: type int
		if(plusPetit(i:int,j:int)==false){
                               ^AlgBubbleSort1:7: error: not found: value j
			echange(i,j)
                                  ^